--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       to { left: 100%; }
     }
 
-    /* Boutons CTA - Mise à jour avec Effet Métallique */
+    /* Boutons CTA */
     .cta-button {
       position: relative;
       background-color: var(--dark);
@@ -119,7 +119,7 @@
       border: 2px solid transparent; 
       min-width: 260px;
       cursor: pointer;
-      overflow: hidden; /* Important pour le reflet */
+      overflow: hidden; 
     }
 
     /* Le reflet métallique */
@@ -410,6 +410,7 @@
             </div>
           </div>
 
+          <!-- Section Confiance avec Slider -->
           <div class="mt-40 w-full text-center">
             <h3 class="text-2xl font-serif italic text-[#00565e] mb-12">Ils nous font confiance</h3>
             <div class="logo-slider-container">
@@ -428,6 +429,7 @@
             </div>
           </div>
 
+          <!-- SECTION QR CODE ACCUEIL -->
           <div class="mt-40 w-full max-w-4xl mx-auto">
             <div class="bg-white/40 p-12 md:p-16 rounded-[3rem] shadow-xl border-2 border-[#00565e]/10 flex flex-col md:flex-row items-center justify-center gap-12 text-center md:text-left transition-all hover:bg-white/60">
               <div class="flex-1 space-y-4">
@@ -453,6 +455,7 @@
         </div>
         
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 text-left">
+          <!-- Items Catégories (Restaurants, Activités, etc.) -->
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
             <div class="text-5xl mb-8">🍽️</div>
@@ -463,7 +466,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Lien réseaux sociaux</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Plan</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=restaurants', '_blank')">VISITER</button>
           </div>
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
@@ -475,7 +478,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#315a97]"></span> Lien réseaux sociaux</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#315a97]"></span> Immersion assurée</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=activit%C3%A9s', '_blank')">VISITER</button>
           </div>
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
@@ -487,7 +490,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Airbnb, Booking</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Fichiers PDF</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=h%C3%A9bergements', '_blank')">VISITER</button>
           </div>
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
@@ -499,7 +502,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Mise en avant produits</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Visibilité boostée</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=shopping', '_blank')">VISITER</button>
           </div>
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
@@ -511,7 +514,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Écoles</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Immobilier Pro</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=professionnels', '_blank')">VISITER</button>
           </div>
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
@@ -523,7 +526,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Immersion assurée</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Plusieurs langues disponibles</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=tourisme', '_blank')">VISITER</button>
           </div>
         </div>
       </section>
@@ -605,7 +608,7 @@
             <span class="text-[#00565e] font-black text-[11px] uppercase tracking-widest block mb-4">Contact & Partenariat</span>
             <h2 class="text-4xl md:text-5xl font-serif italic text-slate-900 leading-tight">Soyez visibles grâce à <br><span class="font-sans font-black text-[#00565e] uppercase">L'immersion 360°.</span></h2>
           </div>
-          <form class="grid grid-cols-1 md:grid-cols-2 gap-10 text-left">
+          <form class="grid grid-cols-1 md:grid-cols-2 gap-10 text-left mb-24">
             <div class="space-y-8">
               <div>
                 <label class="block text-[10px] font-black uppercase text-slate-400 mb-2 tracking-widest">Votre Nom</label>
@@ -624,19 +627,26 @@
               <button type="submit" class="cta-button w-full py-7 rounded-full font-black text-xs uppercase tracking-[0.4em] text-white">Transmettre la Demande</button>
             </div>
           </form>
-          <div class="mt-24 pt-12 border-t border-slate-100 flex flex-col md:flex-row items-center justify-between gap-10 text-left">
-            <div>
-              <h4 class="text-xl font-black text-slate-900 uppercase">Accès <span class="font-serif italic text-[#00565e] font-light">Nomade</span></h4>
-              <p class="text-xs text-slate-400 mt-2 uppercase tracking-widest">Activez l'expérience sur votre mobile.</p>
-            </div>
-            <div class="p-6 bg-white rounded-3xl shadow-xl border border-slate-100">
-              <img src="https://i.ibb.co/x8m2DyP9/Logo-Nova-360-V2-0.png" alt="Logo" class="w-24 h-24 opacity-80 filter brightness-0">
+
+          <!-- SECTION QR CODE DUPLIQUÉE SUR CONTACT (Identique à l'accueil) -->
+          <div class="mt-20 w-full max-w-4xl mx-auto">
+            <div class="bg-slate-50/50 p-12 md:p-16 rounded-[3rem] shadow-xl border-2 border-[#00565e]/10 flex flex-col md:flex-row items-center justify-center gap-12 text-center md:text-left transition-all hover:bg-slate-100/80">
+              <div class="flex-1 space-y-4">
+                <h4 class="text-2xl font-black text-[#00565e] uppercase tracking-tighter">Nova360 <span class="font-serif italic font-light text-[#278299]">Nomade</span></h4>
+                <p class="text-sm text-slate-600 font-medium leading-relaxed uppercase tracking-widest">
+                  Démarrer l'expérience de Nova 360 en flashant ce code, aucune application n'est nécessaire à installer.
+                </p>
+              </div>
+              <div class="p-6 bg-white rounded-3xl shadow-2xl border border-[#00565e]/5 group relative overflow-hidden">
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://nova360.app.codinsight.app/&color=00565e" alt="QR Code Nova360" class="h-32 w-32 relative z-10">
+              </div>
             </div>
           </div>
         </div>
       </section>
     </main>
 
+    <!-- FOOTER HARMONISÉ -->
     <footer id="main-footer" class="py-12 bg-[#00565e] border-t border-white/10 shadow-[0_-10px_30px_-10px_rgba(0,86,94,0.4)]">
       <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center text-[9px] uppercase tracking-widest text-white/50">
         <div class="flex items-center gap-6 mb-6 md:mb-0">
@@ -645,7 +655,7 @@
         </div>
         <div class="flex gap-10">
           <a href="#" class="text-white hover:text-white/80 transition-colors">Mentions Légales</a>
-          <a href="#" class="text-white hover:text-white/80 transition-colors">Confidentialité</a>
+          <a href="#" class="hover:text-white/80 transition-colors">Confidentialité</a>
         </div>
       </div>
     </footer>
