--- a/index.html
+++ b/index.html
@@ -330,7 +330,10 @@
     <nav id="main-nav" class="sticky top-0 z-50">
       <div class="max-w-7xl mx-auto px-6 flex justify-between items-center h-full">
         <div class="cursor-pointer flex items-center gap-3" onclick="navigateToPage('home')">
-          <img src="https://i.ibb.co/x8m2DyP9/Logo-Nova-360-V2-0.png" alt="Logo" class="h-9 w-auto brightness-0 invert">
+          <!-- LOGO HAUT MIS À JOUR AVEC NOUVEL URL POSTIMG -->
+          <a href="https://postimg.cc/CZf70qYT" target="_blank" onclick="event.stopPropagation()">
+             <img src="https://i.postimg.cc/CZf70qYT/Logo-Nova-360-V2-0.png" alt="Logo-Nova-360-V2-0" class="h-9 w-auto brightness-0 invert">
+          </a>
           <span class="text-white font-black tracking-widest text-lg hidden lg:block uppercase italic">Nova360</span>
         </div>
 
@@ -413,12 +416,13 @@
             <h3 class="text-2xl font-serif italic text-[#00565e] mb-12">Ils nous font confiance</h3>
             <div class="logo-slider-container">
               <div class="logo-slider-track">
-                <div class="logo-item"><img src="https://i.ibb.co/qLjcv2Qr/logo-partenaire-5.png" alt="Partenaire"></div>
+                <!-- LOGOS DANS LE SLIDER MIS À JOUR -->
+                <div class="logo-item"><img src="https://i.postimg.cc/CZf70qYT/Logo-Nova-360-V2-0.png" alt="Logo Nova 360"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/VYgr7xvs/logo-partenaire-4.png" alt="Partenaire"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/ZR442Ym5/logo-partenaire-png.png" alt="Partenaire"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/ycP1NWTk/logo-partenaire-2.png" alt="Partenaire"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/KYPqm04/logo-partenaire-3.png" alt="Partenaire"></div>
-                <div class="logo-item"><img src="https://i.ibb.co/qLjcv2Qr/logo-partenaire-5.png" alt="Partenaire"></div>
+                <div class="logo-item"><img src="https://i.postimg.cc/CZf70qYT/Logo-Nova-360-V2-0.png" alt="Logo Nova 360"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/VYgr7xvs/logo-partenaire-4.png" alt="Partenaire"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/ZR442Ym5/logo-partenaire-png.png" alt="Partenaire"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/ycP1NWTk/logo-partenaire-2.png" alt="Partenaire"></div>
@@ -452,7 +456,6 @@
         </div>
         
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 text-left">
-          <!-- Items Catégories avec mot VISITER plus gros (text-[15px]) -->
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
             <div class="text-5xl mb-8">🍽️</div>
@@ -465,7 +468,6 @@
             </ul>
             <button class="cta-button py-4 rounded-xl mt-auto font-black text-[15px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=restaurants', '_blank')">VISITER</button>
           </div>
-
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
             <div class="text-5xl mb-8">🎯</div>
@@ -478,7 +480,6 @@
             </ul>
             <button class="cta-button py-4 rounded-xl mt-auto font-black text-[15px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=activit%C3%A9s', '_blank')">VISITER</button>
           </div>
-
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
             <div class="text-5xl mb-8">🏡</div>
@@ -491,7 +492,6 @@
             </ul>
             <button class="cta-button py-4 rounded-xl mt-auto font-black text-[15px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=h%C3%A9bergements', '_blank')">VISITER</button>
           </div>
-
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
             <div class="text-5xl mb-8">🛍️</div>
@@ -504,7 +504,6 @@
             </ul>
             <button class="cta-button py-4 rounded-xl mt-auto font-black text-[15px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=shopping', '_blank')">VISITER</button>
           </div>
-
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
             <div class="text-5xl mb-8">💼</div>
@@ -517,7 +516,6 @@
             </ul>
             <button class="cta-button py-4 rounded-xl mt-auto font-black text-[15px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=professionnels', '_blank')">VISITER</button>
           </div>
-
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
             <div class="text-5xl mb-8">🏖️</div>
@@ -630,7 +628,6 @@
             </div>
           </form>
 
-          <!-- SECTION QR CODE DUPLIQUÉE SUR CONTACT (Identique à l'accueil) -->
           <div class="mt-20 w-full max-w-4xl mx-auto">
             <div class="bg-slate-50/50 p-12 md:p-16 rounded-[3rem] shadow-xl border-2 border-[#00565e]/10 flex flex-col md:flex-row items-center justify-center gap-12 text-center md:text-left transition-all hover:bg-slate-100/80">
               <div class="flex-1 space-y-4">
@@ -652,7 +649,10 @@
     <footer id="main-footer" class="py-12 bg-[#00565e] border-t border-white/10 shadow-[0_-10px_30px_-10px_rgba(0,86,94,0.4)]">
       <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center text-[9px] uppercase tracking-widest text-white/50">
         <div class="flex items-center gap-6 mb-6 md:mb-0">
-          <img src="https://i.ibb.co/x8m2DyP9/Logo-Nova-360-V2-0.png" alt="Nova" class="h-6 opacity-50 brightness-0 invert">
+          <!-- LOGO PIED DE PAGE CORRIGÉ AVEC NOUVELLE URL POSTIMG -->
+          <a href="https://postimg.cc/CZf70qYT" target="_blank" class="block">
+            <img src="https://i.postimg.cc/CZf70qYT/Logo-Nova-360-V2-0.png" alt="Logo Nova 360" class="h-9 w-auto brightness-0 invert opacity-90 transition-opacity hover:opacity-100">
+          </a>
           <span class="text-white">&copy; 2025 Nova360 Architectural Lab.</span>
         </div>
         <div class="flex gap-10">
