--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
     .logo-item img {
       max-width: 160px;
       max-height: 60px;
-      filter: brightness(0) invert(1);
-      opacity: 0.95;
+      opacity: 1;
     }
 
     /* Demo Interface */
@@ -330,9 +329,9 @@
     <nav id="main-nav" class="sticky top-0 z-50">
       <div class="max-w-7xl mx-auto px-6 flex justify-between items-center h-full">
         <div class="cursor-pointer flex items-center gap-3" onclick="navigateToPage('home')">
-          <!-- LOGO HAUT MIS À JOUR AVEC NOUVEL URL POSTIMG -->
+          <!-- LOGO HAUT CORRIGÉ (SANS FILTRE POUR ÉVITER LE CERCLE BLANC) -->
           <a href="https://postimg.cc/CZf70qYT" target="_blank" onclick="event.stopPropagation()">
-             <img src="https://i.postimg.cc/CZf70qYT/Logo-Nova-360-V2-0.png" alt="Logo-Nova-360-V2-0" class="h-9 w-auto brightness-0 invert">
+             <img src="https://i.postimg.cc/FKTBjyBR/Logo-Nova-360-V2-0.png" alt="Nova 360" class="h-10 w-auto">
           </a>
           <span class="text-white font-black tracking-widest text-lg hidden lg:block uppercase italic">Nova360</span>
         </div>
@@ -416,13 +415,12 @@
             <h3 class="text-2xl font-serif italic text-[#00565e] mb-12">Ils nous font confiance</h3>
             <div class="logo-slider-container">
               <div class="logo-slider-track">
-                <!-- LOGOS DANS LE SLIDER MIS À JOUR -->
-                <div class="logo-item"><img src="https://i.postimg.cc/CZf70qYT/Logo-Nova-360-V2-0.png" alt="Logo Nova 360"></div>
+                <div class="logo-item"><img src="https://i.postimg.cc/FKTBjyBR/Logo-Nova-360-V2-0.png" alt="Logo Nova 360"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/VYgr7xvs/logo-partenaire-4.png" alt="Partenaire"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/ZR442Ym5/logo-partenaire-png.png" alt="Partenaire"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/ycP1NWTk/logo-partenaire-2.png" alt="Partenaire"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/KYPqm04/logo-partenaire-3.png" alt="Partenaire"></div>
-                <div class="logo-item"><img src="https://i.postimg.cc/CZf70qYT/Logo-Nova-360-V2-0.png" alt="Logo Nova 360"></div>
+                <div class="logo-item"><img src="https://i.postimg.cc/FKTBjyBR/Logo-Nova-360-V2-0.png" alt="Logo Nova 360"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/VYgr7xvs/logo-partenaire-4.png" alt="Partenaire"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/ZR442Ym5/logo-partenaire-png.png" alt="Partenaire"></div>
                 <div class="logo-item"><img src="https://i.ibb.co/ycP1NWTk/logo-partenaire-2.png" alt="Partenaire"></div>
@@ -649,9 +647,9 @@
     <footer id="main-footer" class="py-12 bg-[#00565e] border-t border-white/10 shadow-[0_-10px_30px_-10px_rgba(0,86,94,0.4)]">
       <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center text-[9px] uppercase tracking-widest text-white/50">
         <div class="flex items-center gap-6 mb-6 md:mb-0">
-          <!-- LOGO PIED DE PAGE CORRIGÉ AVEC NOUVELLE URL POSTIMG -->
+          <!-- LOGO PIED DE PAGE MIS À JOUR (SANS FILTRE) -->
           <a href="https://postimg.cc/CZf70qYT" target="_blank" class="block">
-            <img src="https://i.postimg.cc/CZf70qYT/Logo-Nova-360-V2-0.png" alt="Logo Nova 360" class="h-9 w-auto brightness-0 invert opacity-90 transition-opacity hover:opacity-100">
+            <img src="https://i.postimg.cc/FKTBjyBR/Logo-Nova-360-V2-0.png" alt="Logo Nova 360" class="h-10 w-auto opacity-90 hover:opacity-100 transition-opacity">
           </a>
           <span class="text-white">&copy; 2025 Nova360 Architectural Lab.</span>
         </div>
