--- a/index.html
+++ b/index.html
@@ -230,7 +230,6 @@
     .logo-item img {
       max-width: 160px;
       max-height: 60px;
-      opacity: 1;
     }
 
     /* Demo Interface */
@@ -328,11 +327,9 @@
     <!-- NAVIGATION PRINCIPALE -->
     <nav id="main-nav" class="sticky top-0 z-50">
       <div class="max-w-7xl mx-auto px-6 flex justify-between items-center h-full">
-        <div class="cursor-pointer flex items-center gap-3" onclick="navigateToPage('home')">
-          <!-- LOGO HAUT CORRIGÉ (SANS FILTRE POUR ÉVITER LE CERCLE BLANC) -->
-          <a href="https://postimg.cc/CZf70qYT" target="_blank" onclick="event.stopPropagation()">
-             <img src="https://i.postimg.cc/FKTBjyBR/Logo-Nova-360-V2-0.png" alt="Nova 360" class="h-10 w-auto">
-          </a>
+        <div class="flex items-center gap-4">
+          <!-- LOGO HAUT AGRANDI (h-14) ET NON CLIQUABLE -->
+          <img src="https://i.postimg.cc/FKTBjyBR/Logo-Nova-360-V2-0.png" alt="Logo Nova 360" class="h-14 w-auto pointer-events-none select-none">
           <span class="text-white font-black tracking-widest text-lg hidden lg:block uppercase italic">Nova360</span>
         </div>
 
@@ -647,10 +644,8 @@
     <footer id="main-footer" class="py-12 bg-[#00565e] border-t border-white/10 shadow-[0_-10px_30px_-10px_rgba(0,86,94,0.4)]">
       <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center text-[9px] uppercase tracking-widest text-white/50">
         <div class="flex items-center gap-6 mb-6 md:mb-0">
-          <!-- LOGO PIED DE PAGE MIS À JOUR (SANS FILTRE) -->
-          <a href="https://postimg.cc/CZf70qYT" target="_blank" class="block">
-            <img src="https://i.postimg.cc/FKTBjyBR/Logo-Nova-360-V2-0.png" alt="Logo Nova 360" class="h-10 w-auto opacity-90 hover:opacity-100 transition-opacity">
-          </a>
+          <!-- LOGO PIED DE PAGE AGRANDI (h-14) ET NON CLIQUABLE -->
+          <img src="https://i.postimg.cc/FKTBjyBR/Logo-Nova-360-V2-0.png" alt="Logo Nova 360" class="h-14 w-auto select-none">
           <span class="text-white">&copy; 2025 Nova360 Architectural Lab.</span>
         </div>
         <div class="flex gap-10">
